RESOLVED FIXED315991
[WPE] missing-field-initializers warnings in WPEInputMethodContextWaylandV3.cpp
https://bugs.webkit.org/show_bug.cgi?id=315991
Summary [WPE] missing-field-initializers warnings in WPEInputMethodContextWaylandV3.cpp
Philippe Normand
Reported 2026-06-01 03:38:30 PDT
.
Attachments
Philippe Normand
Comment 1 2026-06-01 03:42:59 PDT
EWS
Comment 2 2026-06-01 11:41:56 PDT
Committed 314304@main (b0f3b044233d): <https://commits.webkit.org/314304@main> Reviewed commits have been landed. Closing PR #66165 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.