Cherry-pick 314304@main (b0f3b044233d). https://bugs.webkit.org/show_bug.cgi?id=315991

[WPE] missing-field-initializers warnings in WPEInputMethodContextWaylandV3.cpp
    https://bugs.webkit.org/show_bug.cgi?id=315991

    Reviewed by Adrian Perez de Castro.

    Silence missing-field-initializers clang warnings by providing explicit initializers for the action,
    language and preedit_hint callbacks.

    * Source/WebKit/WPEPlatform/wpe/wayland/WPEInputMethodContextWaylandV3.cpp:

    Canonical link: https://commits.webkit.org/314304@main

Canonical link: https://commits.webkit.org/305877.709@webkitglib/2.52